# chess-3d

./: .gitmodules  CMakeLists.txt  README.md
assets/: pieces.json  rules.json
assets/fonts/: lucida.fnt
assets/models/: bishop.glm  bishop.stl  board.body.glm  board.glm  bottom.glm  king.glm  king.stl  knight.glm  knight.stl  pawn.glm  pawn.stl  queen.glm  queen.stl  rook.glm  rook.stl  selector.glm  skybox.glm
assets/shaders/: blur.f.glsl  board.f.glsl  board.v.glsl  copy.f.glsl  font.f.glsl  pick.f.glsl  piece.f.glsl  selection.f.glsl  selection.v.glsl  shadeless.f.glsl  simple.f.glsl  simple.v.glsl  vgauss.f.glsl  vgauss.v.glsl
ext/: glad.c  lodepng.cpp  lodepng.h
glm/detail/: _vectorize.hpp  func_common.inl  func_integer.inl  func_trigonometric.inl  func_vector_relational.inl  setup.hpp  type_mat2x3.inl  type_mat2x4.inl  type_mat3x2.inl  type_mat3x3.inl  type_mat3x4.inl  type_mat4x2.inl  type_mat4x3.inl  type_mat4x4.inl  type_quat.hpp  type_quat.inl  type_vec2.inl
glm/ext/: matrix_clip_space.inl  matrix_projection.inl  quaternion_exponential.inl  quaternion_trigonometric.inl  scalar_constants.hpp  scalar_constants.inl  scalar_relational.inl
glm/gtc/: constants.inl  packing.inl
glm/gtx/: intersect.inl  polar_coordinates.inl  quaternion.hpp  quaternion.inl  scalar_multiplication.hpp
inc/glad/: glad.h
src/: main.cpp
src/anim/: Animated.h  Timer.h
src/gl/: Fbo.cpp  Fbo.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/gui/: Debug.h  GuiRenderer.cpp  GuiRenderer.h
src/gui/font/: Font.h  FontRenderer.cpp  FontRenderer.h  Glyph.h
src/model/: Board.cpp  Board.h  GameState.cpp  GameState.h  MoveResult.h  Piece.cpp  Piece.h  PieceRegistry.cpp  PieceRegistry.h  PieceType.h  Rule.cpp  Rule.h  Ruleset.cpp  Ruleset.h  Team.h
src/render/: Camera.cpp  Camera.h  ChessRenderer.cpp  ChessRenderer.h  PickEngine.cpp  PickEngine.h  Postproc.cpp  Postproc.h  SkyboxRenderer.cpp  SkyboxRenderer.h
src/render/shaders/: BoardShader.h  CopyShader.h  FontShader.h  HBlurShader.h  HGaussShader.h  IShader.cpp  IShader.h  PickShader.h  PieceShader.h  SelectionShader.h  ShadelessShader.h  SimpleShader.h  SkyboxShader.h  VBlurShader.h  VGaussShader.h
src/util/: Buffer.cpp  Buffer.h  FontReader.cpp  FontReader.h  GlmReader.cpp  GlmReader.h  Loader.cpp  Loader.h  Logger.cpp  Logger.h  StlReader.cpp  StlReader.h  Texture.h
